# Lexico

./: .gitignore  README.md  _en_fsts.html  pyproject.toml  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
docs/: architecture.md  deployment-guide.md  groq-api-key.md
scripts/: fetch_expressions.py  supabase_schema.sql
src/lexico/: __init__.py  config.py
src/lexico/cache/: memory_cache.py  sqlite_cache.py
src/lexico/data/: daily_pool.py  expressions_data.json  quotes_data.json
src/lexico/data/themed_decks/: cafe_fr.yaml  cooking_it.yaml  everyday_en.yaml  lisbon_pt.yaml  travel_es.yaml
src/lexico/domain/: deck.py  enums.py  review.py  word.py
src/lexico/providers/: base.py  claude_provider.py  groq_provider.py  stub_provider.py  wiktionary_native_provider.py  wiktionary_provider.py
src/lexico/services/: __init__.py  deck_store.py  enrichment_service.py  gamification.py  lookup_service.py  pg_deck_store.py  review_scheduler.py  seed_decks.py  usage_guardrail.py
src/lexico/ui/: app.py  auth.py  persist.py
src/lexico/ui/components/: deck_picker.py  language_picker.py  rating_widget.py  streak_chip.py  word_card.py  xp_bar.py
src/lexico/ui/views/: __init__.py  challenge.py  decks.py  (+6 more)
src/lexico/utils/: prompts.py
tests/unit/: conftest.py  test_deck_store.py  test_domain.py  test_enrichment_service.py  test_gamification.py  test_lookup_service.py  test_review_scheduler.py  test_seed_decks.py  test_stub_provider.py  test_usage_guardrail.py  test_wiktionary_native_provider.py  test_wiktionary_provider.py
